--- a/go/archery-world-tour.html
+++ b/go/archery-world-tour.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-
 <head>
 
     <meta name="robots" content="noindex, follow" />
@@ -134,7 +133,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +208,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m-pool-party.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m-pool-party.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m-pool-party.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +223,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/master-chess.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/master-chess.png">
+                            <img src="https://sudoku-online.github.io/img/master-chess.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +238,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/brain-test-tricky-puzzles.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/brain-test-tricky-puzzles.png">
+                            <img src="https://sudoku-online.github.io/img/brain-test-tricky-puzzles.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +253,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stickman-climb-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stickman-climb-2.png">
+                            <img src="https://sudoku-online.github.io/img/stickman-climb-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +268,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bike-trials-winter-1.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bike-trials-winter-1.png">
+                            <img src="https://sudoku-online.github.io/img/bike-trials-winter-1.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +283,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/blumgi-rocket.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/blumgi-rocket.png">
+                            <img src="https://sudoku-online.github.io/img/blumgi-rocket.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +298,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/top-speed-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/top-speed-3d.png">
+                            <img src="https://sudoku-online.github.io/img/top-speed-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +313,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/temple-of-boom.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/temple-of-boom.png">
+                            <img src="https://sudoku-online.github.io/img/temple-of-boom.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +328,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/vex-7.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/vex-7.png">
+                            <img src="https://sudoku-online.github.io/img/vex-7.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +343,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/breaking-the-bank.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/breaking-the-bank.png">
+                            <img src="https://sudoku-online.github.io/img/breaking-the-bank.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +358,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/slope.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/slope.png">
+                            <img src="https://sudoku-online.github.io/img/slope.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +373,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stack-bump-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stack-bump-3d.png">
+                            <img src="https://sudoku-online.github.io/img/stack-bump-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
